[package]
authors = ["Patrick Nairne, Rouven Reuter"]
description = "A Rust library for retrieving data from the VariantValidator and HGNC APIs for Phenopackets."
edition = "2024"
homepage = "https://robinsongroup.github.io/"
license-file = "LICENSE"
name = "pivotal"
version = "0.1.8"
keywords = ["variant", "validator", "hgnc", "hgvs", "phenopacket"]
readme = "README.md"
repository = "https://github.com/psnairne/PIVOTAL"


[dependencies]
phenopackets = { version = "0.2.2-post1", features = ["serde"] }
serde = "1.0.228"
thiserror = "2.0.17"
ratelimit = "0.10.0"
redb = "3.1.0"
directories = "6.0.0"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde_json = "1.0.145"
regex = "1.12.2"
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
rstest = "0.26.1"
tempfile = "3.23.0"